Salesforce Training org/objects/School__c.object
<CustomObject>
    <fields>
        <fullName>About_US__c</fullName>
        <description>Write here something about your organization.</description>
        <label>About US</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Its shows about the real-time status of the school.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Estabilishment__c</fullName>
        <description>It is Date of Organization was Estabilish.</description>
        <label>Date of Estabilishment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flow_Element_Category__c</fullName>
        <description>Element Category for which fault occurred while executing the flow.</description>
        <label>Flow Element Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Element_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flow_Element_Name__c</fullName>
        <description>Element Name for which fault occurred while executing the flow.</description>
        <label>Flow Element Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow_Error_Message__c</fullName>
        <label>Flow Error Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Flow_Error_Occurred_At__c</fullName>
        <label>Flow Error Occurred At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flow_Logged_In_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Logged In User for which fault occurred while executing the flow.</description>
        <label>Flow Logged In User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>School</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flow_Name__c</fullName>
        <description>Flow Name - That got erred out while updating School record.</description>
        <label>Flow Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow_Record_Id__c</fullName>
        <description>Record ID for which fault occurred while executing the flow.</description>
        <label>Flow Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Class__c</fullName>
        <label>No Of Class</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Student__c</fullName>
        <label>No Of Student</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Teachers__c</fullName>
        <label>No Of Teachers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Random_Text__c</fullName>
        <label>Random Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perspective</fullName>
                </value>
                <value>
                    <fullName>Documentation is Progrees</fullName>
                </value>
                <value>
                    <fullName>Close Won</fullName>
                </value>
                <value>
                    <fullName>Close Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Year_of_Organization__c</fullName>
        <formula>YEAR( TODAY() )-YEAR( Date_of_Estabilishment__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Year of Organization</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>Paste here your organization&apos;s social platform link.</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>School</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Date_of_Estabilishment__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schools</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Apex_Sharing__c</fullName>
        <label>Apex Sharing</label>
    </sharingReasons>
    <validationRules>
        <fullName>VR_Establishment_Date</fullName>
        <active>false</active>
        <description>this date of estabilishment of organizations.</description>
        <errorConditionFormula>Date_of_Estabilishment__c  &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Date_of_Estabilishment__c</errorDisplayField>
        <errorMessage>Please enter valid date of estabilishment</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_ExceptionErrorByPlatformEvent</fullName>
        <active>false</active>
        <description>Here This Validation Rule is Show Error When No Of Student Will More Than 1</description>
        <errorConditionFormula>No_Of_Class__c == 1</errorConditionFormula>
        <errorMessage>Sorry You Can  not  Have any 1 Student on School</errorMessage>
    </validationRules>
</CustomObject>